...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--NYTimes-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="kNewsListViewController" title="NYTimes" id="BYZ-38-t0r" customClass="NewsListViewController" customModule="NYTimes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kXQ-AS-ADp">
                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
...
                                            <outlet property="thumbnailImageView" destination="hGi-FB-jbO" id="iZO-A3-Es8"/>
                                            <outlet property="titleLabel" destination="BJV-1k-ilj" id="pCb-gd-oUv"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="NewsListTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="XOQ-px-dbt"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="NjQ-6a-2TZ"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="NewsListVC"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kXQ-AS-ADp" secondAttribute="bottom" id="2DO-6Q-c8s"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kXQ-AS-ADp" secondAttribute="trailing" id="B6S-ED-NoN"/>
                            <constraint firstItem="kXQ-AS-ADp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WAv-FN-JIF"/>
                            <constraint firstItem="kXQ-AS-ADp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hVR-eA-bb7"/>
                        </constraints>
...
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="QTb-3H-v2w">
                                                <rect key="frame" x="16" y="16" width="382" height="417.5"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Lz-E0-i3z">
                                                        <rect key="frame" x="0.0" y="0.0" width="37" height="18"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="CategoryLabel"/>
                                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="
                                                        <rect key="frame" x="0.0" y="28" width="45" height="21.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="TitleLabel"/>
                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="w4t-Wk-HXS">
                                                        <rect key="frame" x="0.0" y="59.5" width="382" height="250"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="LargeImage"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="250" id="qDy-6a-hhx"/>
                                                        </constraints>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="
                                                        <rect key="frame" x="0.0" y="319.5" width="34.5" height="17"/>
...
